welcome.lessons.welcome.instructions.Instructions.scala.error
Program:2: error: identifier expected but double literal found.
(1 ..3) forward()
    ^